[metadata]
name = pylava-pre-commit
url='https://github.com/00willo/pylava-pre-commit',
description = 'Support for using pylava with the pre-commit framework'
author = 'Graham Williamson'
author_email = graham@williamsonsinc.id.au
version = '0.1.0'
licence = MIT Licence
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',

[options]
install_requires =
    pylava
    pyflakes
    mccabe
    pylint
    pydocstyle
